showing graph in IE8 too (bnc#551784)

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -10,6 +10,7 @@
   <script type="text/javascript" charset="utf-8" src="/inc/jquery.js"></script>
   <script type="text/javascript" charset="utf-8" src="/inc/jquery.query.js"></script>
   <script type="text/javascript" charset="utf-8" src="/inc/jquery.timers.js"></script>
+  <!--[if IE]><script type="text/javascript" charset="utf-8" src="/javascripts/excanvas.js"></script><![endif]-->
   <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.jqplot.js"></script>
   <script type="text/javascript" charset="utf-8" src="/javascripts/plugin/jqplot.pieRenderer.js"></script>
   <script type="text/javascript" charset="utf-8" src="/inc/jquery.ui.custom.js"></script>
