--- a/webclient/public/stylesheets/yast.css
+++ b/webclient/public/stylesheets/yast.css
@@ -37,6 +37,13 @@
  color: red;
 }
 
+#no_js_warning {
+  background-color:#fcfdde;
+  width:100%;
+  text-align:center;
+  padding: 5px 0px 5px 0px
+}
+
 #status_patches {
   margin-left: 2em;
 }
