--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -66,13 +66,12 @@
     </p>
     <p>
       <% if @utcstatus != "UTConly" %>
-        <label for="utc"><%= _("Hardware clock is set to UTC") %></label>
+        <label for="utc"><%= _("Hardware clock is set to <br>UTC") %></label>
         <% #don't use check_box helper as it generate also hidden opposite value
         %>
         <input type="checkbox" name="utc" id="utc" value="true"
         <%=  "checked=\"checked\"" if @utcstatus == "UTC"%>
                <%=  "disabled=\"disabled\"" if disabled %> />
-        <span class="form-details"><%=_("Hardware clock is set to UTC")%></span>
     <% end %>
     </p>
   </fieldset>
