--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -56,7 +56,7 @@
         <label><%=_("Password")%></label>
         <%= f.password_field :password, :disabled => disabled %></p>
       <p>
-        <label><%=_("Confirm Password")%></label>
+        <label><%=_("Confirm password")%></label>
         <%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#mail_settings_password" %>
       </p>
     </fieldset>
