--- a/plugins/permissions/app/views/permissions/index.rhtml
+++ b/plugins/permissions/app/views/permissions/index.rhtml
@@ -43,7 +43,7 @@
 
   <link rel="stylesheet" href="/inc/checktree/checktree.css" type="text/css" media="screen" title="default" charset="utf-8" />
  </head>
-<div class='plugin-icon'><img src='/icons/yast-security.png'/><%=_("User Permissions")%></div>
+<div class='plugin-icon'><img src='/icons/yast-permissions.png'/><%=_("User Permissions")%></div>
 <div class="plugin-content"
 <br>
 <% form_tag '/permissions/search' do %>
