adjusted layout of edit users

--- a/plugins/permissions/app/views/permissions/index.rhtml
+++ b/plugins/permissions/app/views/permissions/index.rhtml
@@ -155,8 +155,8 @@
    <br>
    <% #not ready to set permissions submit_tag _("Set"), :disabled=> !@right_set_permissions, :class => 'button' 
    %>
-   <a href="/" class="button"><%=_("Back")%></a>
  <% end %>
+ <%= form_send_buttons :disabled => disabled, :class => "button" %>
 <% end %>
 </div>
 </html>
