--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1><%=_("Edit User %s") %@user.uid%></h1>
+<h1><%=_("Edit user %s") %@user.uid%></h1>
 <br>
 
 <% disabled = ! @permissions[:usermodify] %>
@@ -6,44 +6,40 @@
 <% form_for(:user, @user, :url => { :action => "update" }, :html => { :method => :put } ) do |f| %>
   <%= f.error_messages %>
 
-  <div class="table">
-    <table class="list" cellpadding="0" cellspacing="0">
-    <tr>
- 	<th class="full" colspan="2"><%=_("User")%></th>
-    </tr>
-    <tr>
-	<td class="first" width="120"><strong><%=_("Full Name")%></strong></td>
-	<td class="last"><%= f.text_field :cn , :disabled => disabled %></td>
-    </tr>
-    <tr class="bg">
-	<td class="first"><strong><%=_("Groups")%></strong></td>
-	<td class="last"><%= f.text_field :grp_string, :disabled => disabled %></td>
-    </tr>
-    <tr>
-	<td class="first"><strong><%=_("Default Group")%></strong></td>
-	<td class="last"><%= f.text_field :groupname, :disabled => disabled %></td>
-    </tr>
-    <tr class="bg">
-	<td class="first"><strong><%=_("Home Directory")%></strong></td>
-	<td class="last"><%= f.text_field :home_directory, :disabled => disabled %></td>
-    </tr>
-    <tr>
-	<td class="first"><strong><%=_("Login Shell")%></strong></td>
-	<td class="last"><%= f.text_field :login_shell, :disabled => disabled %></td>
-    </tr>
-    <tr class="bg">
-	<td class="first"><strong><%=_("Login Name")%></strong></td>
-	<td class="last"><%= f.text_field :uid, :disabled => disabled %></td>
-    </tr>
-    <tr>
-	<td class="first"><strong><%=_("UID Number")%></strong></td>
-	<td class="last"><%= f.text_field :uid_number , :disabled => disabled %></td>
-    </tr>
-    <tr class="bg">
-	<td class="first"><strong><%=_("Password")%></strong></td>
-	<td class="last"><%= f.password_field :user_password, :disabled => disabled %></td>
-    </tr>
-    </table>
+  <fieldset>
+    <p>
+	<label><%=_("Full Name")%></label>
+	<%= f.text_field :cn , :disabled => disabled %>
+    </p>
+    <p>
+	<label><%=_("Groups")%></label>
+	<%= f.text_field :grp_string, :disabled => disabled %>
+    </p>
+    <p>
+	<label><%=_("Default Group")%></label>
+	<%= f.text_field :groupname, :disabled => disabled %>
+    </p>
+    <p>
+	<label><%=_("Home Directory")%></label>
+	<%= f.text_field :home_directory, :disabled => disabled %>
+    </p>
+    <p>
+	<label><%=_("Login Shell")%></label>
+	<%= f.text_field :login_shell, :disabled => disabled %>
+    </p>
+    <p>
+	<label><%=_("Login Name")%></label>
+	<%= f.text_field :uid, :disabled => disabled %>
+    </p>
+    <p>
+	<label><%=_("UID Number")%></label>
+	<%= f.text_field :uid_number , :disabled => disabled %>
+    </p>
+    <p>
+	<label><%=_("Password")%></label>
+	<%= f.password_field :user_password, :disabled => disabled %>
+    </p>
+    </fieldset>
     <p><%= f.submit _("Update"), :disabled => disabled %><%= link_to _('Back'), {:action => :index}, :onclick=>"$('#progress').show()", :class => "button"%></p>
   </div>
 <% end %>
