remove button code from permissions module

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -22,6 +22,7 @@ $(document).ready(function() {
 
 <div class='plugin-icon'><img src='/images/monitoring.png'/><%=_("Status")%></div>
 <div class="plugin-content grid_12">
+<%= link_to  _("Edit Limits"), '/status/edit', :class => "button" %>
 <% @logs.each do |log| %>
 <h2><%= log.description %></h2>
 <div id="log-<%= log.id %>-console"
