--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -66,6 +66,7 @@
   <div class="list-row overview">
 
     <% @shortcuts.each do |name, data| %>
+      <% next if data.nil? || data.empty? %>
       <% if line_counter*5 == shortcuts_counter %>
         <% if line_counter > 0 %>
         </div>
