--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -7,7 +7,7 @@
 
     <% javascript_tag do -%>
       $(document).ready( function() {
-      $(".datepicker").datepicker( { dateFormat: 'dd/mm/yy'} );
+      $("#date_date").datepicker( { dateFormat: 'dd/mm/yy'} );
       });
     <% end -%>
 
