* fixed css problem at status wrapper * dont now, where the other files come from

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -206,7 +206,12 @@ ul li {
 /*  #status-wrapper, */
   #favorites {
   }
-  
+ 
+#status_patches {
+  margin: 0;
+  padding-top: 1em;
+}
+
   #status-wrapper {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -567,7 +572,6 @@ input[type="submit"] {
   -webkit-box-shadow: 0 1px 3px #ccc;
   -moz-box-shadow: 0 1px 3px #ccc;
   box-shadow: 0 1px 3px #ccc;
-  padding: 1em;
 }
 
 .plugin-content form > p,
