fixed css issue Bug #555196

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -96,6 +96,7 @@ ul li {
   border-bottom: 1px solid #06c;
   height: 50px;
   text-align: center;
+  position:relative;
 }
   #header h1,
   #header img {
