read system status summary at background, display progress

--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -16,7 +16,7 @@
   <% javascript_tag do -%>
     $(document).ready( function() {
     <%= remote_function(:update => "status_status",
-      :url => { :controller => :status, :action => :show_summary }) %>
+      :url => { :controller => :status, :action => :show_summary, :background => true }) %>
     });
   <% end -%>
 <% end %>
