Inconsisten Save/Cancel Buttons in edit status limits (bnc#551849)

--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -36,7 +36,6 @@
     <% end %>
   <% end %>
 </table>
-<%= submit_tag _("Save"), :disabled=> disabled, :class => 'button' -%>
-<a href="/status" class="button"><%=_("Back")%></a>
+<%= form_send_buttons :disabled => disabled, :class => "button" %>
 <% end -%>
 
