--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -64,6 +64,14 @@
               :disabled => disabled})  %>
         </span>
     </p>
+    <p>
+        <% #don't use check_box helper as it generate also hidden opposite value
+        %>
+        <input type="checkbox" name="utc" id="utc" value="true"
+        <%=  "checked=\"checked\"" if @utcstatus == "UTC"%>
+               <%=  "disabled=\"disabled\"" if disabled %> />
+        <span class="form-details"><%=_("Hardware clock is set to UTC")%></span>
+    </p>
   </fieldset>
   <fieldset>
     <p>
