handle PackageKit errors (bnc #559233)

--- a/plugins/patch_updates/app/views/patch_updates/_patch_summary.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/_patch_summary.html.erb
@@ -1,4 +1,4 @@
-<%= report_error(error, _("A problem occured when loading patch information.")) if error %>
+<%= report_error(error, error_string) if error %>
 
 <div class="status_patches">
   <% unless patch %>    
