--- a/plugins/patch_updates/app/views/patch_updates/index.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/index.html.erb
@@ -12,7 +12,7 @@
   <div class='plugin-content grid_12'>
   <div class="loading"></div>
   <% if @patch_updates.empty? %>
-    <h3><%=_("Your system is up to date.") %></h3>
+    <h3><%=_("Your system is up to date.") unless @error%></h3>
     <%= link_to _("Back"), '/', :class=>"button" %>
   <% else %>
     <h3><%=_("Updates available") %></h3>
