--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -64,14 +64,16 @@
               :disabled => disabled})  %>
         </span>
     </p>
+    <% unless @utcstatus.nil? %>
     <p>
         <% #don't use check_box helper as it generate also hidden opposite value
         %>
         <input type="checkbox" name="utc" id="utc" value="true"
-        <%=  "checked=\"checked\"" if @utcstatus == "UTC"%>
+        <%=  "checked=\"checked\"" if @utcstatus %>
                <%=  "disabled=\"disabled\"" if disabled %> />
         <span class="form-details"><%=_("Hardware clock is set to UTC")%></span>
     </p>
+    <% end %>
   </fieldset>
   <fieldset>
     <p>
