--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -64,9 +64,10 @@ input {
   color: #666;
   font-size: 1em;
   background: #fcfcfc;
+  width: 24em;
 }
   input[type="text"] {
-    width: 13em;
+    width: 24em;
   }
   input:focus {
     border: 1px solid #69c;
@@ -122,7 +123,7 @@ ul li {
   }
 
 #content {
-  min-height: 600px;
+
   margin-top: 2em;
 }
   #content h2 {
@@ -629,6 +630,9 @@ input {
     margin: 1em;
 }
 
+.example{
+	font-style:italic;
+}
 
 
 /* Error Messages */
@@ -644,3 +648,5 @@ input {
   float: left;
   margin-right: 0.3em;
 }
+
+
