add input help into network module

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -34,10 +34,15 @@
 
 	 <script type="text/javascript">
 	    $(function() {
-	      $('#nameservers').example('');
+	      $('#nameservers').example('IP adress of machine which translates hostnames in IP adresses');
 	    });
 	  </script>
 
+	 <script type="text/javascript">
+	    $(function() {
+	      $('#searchdomains').example('Domain name where hostname searching starts ');
+	    });
+	  </script>
 
 	 <script type="text/javascript">
 	    $(function() {
