--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -1,112 +1,110 @@
-<% if @permissions %>
-  <% disabled = ! @permissions[:write] %>
+<% disabled = !@permissions[:write] %>
 
-  <% content_for :head do %>
-    <%= javascript_include_tag :defaults %>
-    <link rel="stylesheet" href="/inc/smoothness/jquery.ui.custom.css" type="text/css" media="screen" title="default" charset="utf-8" />
+<% content_for :head do %>
+  <%= javascript_include_tag :defaults %>
+  <link rel="stylesheet" href="/inc/smoothness/jquery.ui.custom.css" type="text/css" media="screen" title="default" charset="utf-8" />
 
-    <% javascript_tag do -%>
-      $(document).ready( function() {
-      $("#date_date").datepicker( { dateFormat: 'dd/mm/yy'} );
-      });
-    <% end -%>
+  <% javascript_tag do -%>
+    $(document).ready( function() {
+    $("#date_date").datepicker( { dateFormat: 'dd/mm/yy'} );
+    });
+  <% end -%>
 
-    <!-- FIXME move javascript function outside of index -->
-    <% javascript_tag do -%>
-      function submitTime() {
-      if (!$("#timeconfig_manual")[0].checked){
-        return true;
-      }
-      if (!$("#date_date")[0].value.match( /^\d{2}\/\d{2}\/\d{4}$/)){
-      alert ("<%= _("Invalid date format. Correct one is dd/mm/yyyy") %>");
-      return false;
-      }
-      if (!$("#currenttime")[0].value.match( /^\d{2}:\d{2}:\d{2}$/)) {
-      alert ("<%= _("Invalid time format. Correct one is hh:mm:ss") %>");
-      return false;
-      }
-      $('#progress').show();
+  <!-- FIXME move javascript function outside of index -->
+  <% javascript_tag do -%>
+    function submitTime() {
+    if (!$("#timeconfig_manual")[0].checked){
       return true;
-      };
-    <% end -%>
-    <% javascript_tag do -%>
-      function enable() {
-        if ( !<%= disabled %> ){
-          $("#date_date")[0].disabled = false;
-          $("#currenttime")[0].disabled = false;
-        }
-      };
-      function disable() {
-          $("#date_date")[0].disabled = true;
-          $("#currenttime")[0].disabled = true;
+    }
+    if (!$("#date_date")[0].value.match( /^\d{2}\/\d{2}\/\d{4}$/)){
+    alert ("<%= _("Invalid date format. Correct one is dd/mm/yyyy") %>");
+    return false;
+    }
+    if (!$("#currenttime")[0].value.match( /^\d{2}:\d{2}:\d{2}$/)) {
+    alert ("<%= _("Invalid time format. Correct one is hh:mm:ss") %>");
+    return false;
+    }
+    $('#progress').show();
+    return true;
+    };
+  <% end -%>
+  <% javascript_tag do -%>
+    function enable() {
+      if ( !<%= disabled %> ){
+        $("#date_date")[0].disabled = false;
+        $("#currenttime")[0].disabled = false;
       }
+    };
+    function disable() {
+        $("#date_date")[0].disabled = true;
+        $("#currenttime")[0].disabled = true;
+    }
 
 
-    <% end -%>
-  <% end %>
-  
-  <div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/><%=_("Time")%></div>
-  
-  <div class="plugin-content grid_12">
-    <% form_tag '/systemtime/update', {:class => 'container', :onsubmit => "submitTime();"} do %>
-      <% #TODO tooltip for form <div> _("Table for settings timezone for target machine.")  </div>
-      %>
-    <fieldset id="" class="">
-      <p>
-        <label for="region"><%=_("Region")%></label>
-          <%= select_tag "region", options_for_select(@valid, @region.name), :disabled => disabled %>
-      </p>
-      <p>
-        <label for="timezone"><%=_("Timezone")%></label>
-        <span id="timezones">
-          <%= render(:partial => 'timezones',
-            :locals => {:region => @region, :default => @timezone,
-              :disabled => disabled})  %>
-        </span>
-    </p>
-    <% unless @utcstatus.nil? %>
-    <p>
-        <% #don't use check_box helper as it generate also hidden opposite value
-        %>
-        <input type="checkbox" name="utc" id="utc" value="true"
-        <%=  "checked=\"checked\"" if @utcstatus %>
-               <%=  "disabled=\"disabled\"" if disabled %> />
-        <span class="form-details"><%=_("Hardware clock is set to UTC")%></span>
-    </p>
-    <% end %>
-  </fieldset>
-  <fieldset>
-    <p>
-      <input type="radio" name="timeconfig" value="manual" onclick="enable();" id="timeconfig_manual"
-      <%= "disabled=\"disabled\"" if disabled %>
-      >
-      <%=_("Manually configure time")%>
-    </p>
-      <% #TODO for tooltip _("Manual time configuration table, where user selects data and time for target machine")
-      %>
-    <p>
-      <label for="date_date"><%= _("Date") %></label>
-      <%= text_field "date","date", :disabled=> "true", :value => @date %>
-    </p>
-    <p>
-      <label for="currenttime"><%= _("Time") %></label>
-      <%= text_field_tag "currenttime", @time, :disabled=> "true"%>
-    </p>
-    <p>
-      <input id="timeconfig" type="radio" name="timeconfig" value="ntp_sync" onclick="disable();"
-      <%=  "disabled=\"disabled\"" if disabled || !@ntp %>
-      > <%=_("Synchronize via Network Time Protocol (NTP)")%>
-    </p>
-  </fieldset>
-    <%= form_send_buttons :disabled => disabled, :class => "button" %>
-    <% end %>
-  </div>
- 
-
-  <%= observe_field(:region,
-    :frequency => 0.25,
-    :update => :timezones,
-    :url => { :action => :timezones_for_region },
-    :with => "'disabled=' + "+ (disabled ? "true":"false")+" + '&value=' +value") %>
+  <% end -%>
 <% end %>
+
+<div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/><%=_("Time")%></div>
+
+<div class="plugin-content grid_12">
+  <% form_tag '/systemtime/update', {:class => 'container', :onsubmit => "submitTime();"} do %>
+    <% #TODO tooltip for form <div> _("Table for settings timezone for target machine.")  </div>
+    %>
+  <fieldset id="" class="">
+    <p>
+      <label for="region"><%=_("Region")%></label>
+        <%= select_tag "region", options_for_select(@stime.regions, @stime.region.name), :disabled => disabled %>
+    </p>
+    <p>
+      <label for="timezone"><%=_("Timezone")%></label>
+      <span id="timezones">
+        <%= render(:partial => 'timezones',
+          :locals => {:region => @stime.region, :default => @stime.timezone,
+            :disabled => disabled})  %>
+      </span>
+  </p>
+  <% unless @stime.utcstatus.nil? %>
+  <p>
+      <% #don't use check_box helper as it generate also hidden opposite value
+      %>
+      <input type="checkbox" name="utc" id="utc" value="true"
+      <%=  "checked=\"checked\"" if @stime.utcstatus %>
+             <%=  "disabled=\"disabled\"" if disabled %> />
+      <span class="form-details"><%=_("Hardware clock is set to UTC")%></span>
+  </p>
+  <% end %>
+</fieldset>
+<fieldset>
+  <p>
+    <input type="radio" name="timeconfig" value="manual" onclick="enable();" id="timeconfig_manual"
+    <%= "disabled=\"disabled\"" if disabled %>
+    >
+    <%=_("Manually configure time")%>
+  </p>
+    <% #TODO for tooltip _("Manual time configuration table, where user selects data and time for target machine")
+    %>
+  <p>
+    <label for="date_date"><%= _("Date") %></label>
+    <%= text_field "date","date", :disabled=> "true", :value => @stime.date %>
+  </p>
+  <p>
+    <label for="currenttime"><%= _("Time") %></label>
+    <%= text_field_tag "currenttime", @stime.time, :disabled=> "true"%>
+  </p>
+  <p>
+    <input id="timeconfig" type="radio" name="timeconfig" value="ntp_sync" onclick="disable();"
+    <%=  "disabled=\"disabled\"" if disabled || !@ntp_available %>
+    > <%=_("Synchronize via Network Time Protocol (NTP)")%>
+  </p>
+</fieldset>
+  <%= form_send_buttons :disabled => disabled, :class => "button" %>
+  <% end %>
+</div>
+
+
+<%= observe_field(:region,
+  :frequency => 0.25,
+  :update => :timezones,
+  :url => { :action => :timezones_for_region },
+  :with => "'disabled=' + "+ (disabled ? "true":"false")+" + '&value=' +value") %>
 
