--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -5,7 +5,7 @@
   <%= javascript_include_tag :defaults %>
 
   <style type="text/css">
-    label.error { display: none; color: red; padding-left: 11.5em; padding-bottom: 1em; text-align: left; vertical-align: top; width: 50% }
+    label.error { display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50% }
   </style>
 
   <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.example.js"></script>
@@ -70,7 +70,8 @@
 
       // make the error message translatable - override the default messsage
       $.extend($.validator.messages, {
-	equalTo: "<%= _("The passwords do not match.") -%>"
+	equalTo: "<%= _("The passwords do not match.") -%>",
+	required: "<%= _("A password is required.") -%>"
       });
     });
 
