showing limits in the menue bar

--- a/plugins/status/app/views/status/_status_summary.html.erb
+++ b/plugins/status/app/views/status/_status_summary.html.erb
@@ -2,7 +2,7 @@
 
 <div class="status_status">
   <% link_to "status" do %>
-    <% if !status.blank? %>
+    <% unless status.blank? %>
       <div class="status-icon <%= level %>"></div>
       <span><%= status %></span>
     <% else %>
