--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -71,7 +71,7 @@ $(document).ready(function() {initMenuBar();});
 		<option value="30"><%= _("30 Minutes") %></option>
 		<option value="60"><%= _("1 Hour") %></option>
 		<option value="360"><%= _("6 Hours") %></option>
-		<option value="720"><%= _("12 Hour") %></option>
+		<option value="720"><%= _("12 Hours") %></option>
           </select>
           </p>
           <%= observe_field(measurement_id,
